apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-identity-platform-ingress
  namespace: user-identity-platform
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - account.novasoftworks.com
      secretName: account-novasoftworks-com-tls
  rules:
    - host: account.novasoftworks.com
      http:
        paths:
          - path: /self-service
            pathType: Prefix
            backend:
              service:
                name: kratos-public
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 80
